--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.78.0
 uvicorn==0.18.3
 sentence-transformers==2.2.2
-torch==1.6.0
+torch==2.0.1
+torchvision==0.15.2
 numpy>=1.20.0,<1.25.0
 PyPDF2==3.0.1
